Manage work order status WARNING: INCOMPLETE FOR NOW, WAITING FOR INSTRUCTIONS

--- a/sample/sample_springboot_setup/sender/application.properties
+++ b/sample/sample_springboot_setup/sender/application.properties
@@ -68,6 +68,10 @@ camel.springboot.xmlRoutes=file:routes/*.xml
 
 # mapping codes for patients approved for service separated by semicolon
 odoo.approved-for-service-id=ICRC:PRP_101
+# mapping codes for obs to send to odoo separated by semicolon
+odoo.obs-concept-values=ICRC:XXXX
+# mapping codes of the manufacturing order IDs which should trigger odoo workorder state change
+odoo.manufacturing-order-concept-ref=ICRC:Manufacturing order id
 
 # Odoo configuration
 # URL to connect to the Odoo REST API
