--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,10 +3,11 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.openmrs.sync</groupId>
+    <groupId>org.openmrs</groupId>
     <artifactId>openmrs-sync-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+  <groupId>org.openmrs.sync</groupId>
   <artifactId>openmrs-sync-app</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -23,6 +24,11 @@
       <groupId>org.openmrs.sync</groupId>
       <artifactId>camel-openmrs</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.utils</groupId>
+      <artifactId>camel-utils</artifactId>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
