--- a/camel-openmrs/pom.xml
+++ b/camel-openmrs/pom.xml
@@ -3,10 +3,11 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.openmrs.sync</groupId>
+        <groupId>org.openmrs</groupId>
         <artifactId>openmrs-sync-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <groupId>org.openmrs.sync</groupId>
     <artifactId>camel-openmrs</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
