--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openmrs.sync</groupId>
+  <groupId>org.openmrs</groupId>
   <artifactId>openmrs-sync-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -10,6 +10,7 @@
   <modules>
     <module>app</module>
     <module>camel-openmrs</module>
+    <module>camel-utils</module>
   </modules>
 
   <name>OpenMRS synchro parent</name>
