Correct bug with timezones by setting spring.jpa.properties.hibernate.jdbc.time_zone

--- a/sample/sample_springboot_setup/receiver/application.properties
+++ b/sample/sample_springboot_setup/receiver/application.properties
@@ -26,6 +26,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.properties.hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Configuration of the camel receiver endpoint
 # Use either one of the following confs. JMS endpoint if activeMQ is configured of file endpoint for testing purpose
