--- a/sample/sample_springboot_setup/sender/application.properties
+++ b/sample/sample_springboot_setup/sender/application.properties
@@ -25,9 +25,10 @@ spring.openmrs-datasource.password=openmrs
 
 # JPA configuration
 # THIS CONFIGURATION SHOULD NOT BE MODIFIED
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.properties.hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Configuration of the Management database
 # Driver class of the management datasource (should not be changed in a usual use)
