Modify OpenMrs sync of obs to work orders in Odoo

--- a/sample/sample_springboot_setup/sender/application.properties
+++ b/sample/sample_springboot_setup/sender/application.properties
@@ -69,8 +69,18 @@ camel.springboot.xmlRoutes=file:routes/*.xml
 
 # mapping codes for patients approved for service separated by semicolon
 odoo.approved-for-service-id=ICRC:PRP_101
-# mapping codes for obs to send to odoo separated by semicolon
-odoo.obs-concept-values=ICRC:XXXX
+# mapping code for obs section activities
+odoo.obs-section-activity=ICRC:PRP_CC_Section_Activity
+# mapping code for obs manufacturing order section
+odoo.obs-section-manufacturing-order-id=ICRC:PRP_CC_Manufacturing_Order_Id
+# mapping code for obs workorder sequence section
+odoo.obs-section-workorder-sequence=ICRC:176055
+# mapping code for obs restart datetime section
+odoo.obs-section-workorder-restart-datetime=ICRC:176055
+# mapping code for obs pause datetime section
+odoo.obs-section-workorder-pause-datetime=ICRC:176055
+# mapping code for obs validation datetime section
+odoo.obs-section-workorder-validation-datetime=ICRC:176055
 # mapping codes of the manufacturing order IDs which should trigger odoo workorder state change
 odoo.manufacturing-order-concept-ref=ICRC:Manufacturing order id
 
