Remove Camel util classes from /app module

--- a/app/src/it/resources/application.properties
+++ b/app/src/it/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.ddlAuto=create
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
+camel.output.endpoint.file.location=/
+
 pgp.receiver.keysFolderPath=/src/it/resources/receiver
 pgp.receiver.password=m8Js*xGJ&$bC2+DgRTjCM2$b
 
