Change MySQL connector to correct bug with timezones and LocalDates

--- a/sample/sample_springboot_setup/receiver/application.properties
+++ b/sample/sample_springboot_setup/receiver/application.properties
@@ -8,7 +8,7 @@ spring.activemq.password=password
 
 # Configuration of the openMRS database to read from
 # Driver class of the openMRS datasource (should not be changed in a usual use)
-spring.openmrs-datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.openmrs-datasource.driverClassName=com.mysql.jdbc.Driver
 # Dialect of the openMRS datasource (should not be changed in a usual use)
 spring.openmrs-datasource.dialect=org.hibernate.dialect.MySQLDialect
 # DON'T CHANGE THIS PROPERTY
