odoo.approved-for-service-id → odoo.syncable-patient-states in Camel routes

--- a/sample/sample_springboot_setup/sender/application.properties
+++ b/sample/sample_springboot_setup/sender/application.properties
@@ -67,8 +67,8 @@ pgp.sender.receiverUserId=openmrs-central@icrc.org
 # Location of the Camel routes xml files
 camel.springboot.xmlRoutes=file:routes/*.xml
 
-# mapping codes for patients approved for service separated by semicolon
-odoo.approved-for-service-id=ICRC:PRP_101
+# If the patient is in any of the below semicolon-separated states, it is synced to Odoo
+odoo.syncable-patient-states=ICRC:SERVICES_APPROVED;ICRC:IN_FOLLOWUP
 # mapping code for obs section activities
 odoo.obs-section-activity=ICRC:PRP_CC_Section_Activity
 # mapping code for obs manufacturing order section
