--- a/camel-openmrs/pom.xml
+++ b/camel-openmrs/pom.xml
@@ -29,7 +29,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-            <url>http://jcenter.bintray.com</url>
+            <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
 
