Adding web console for H2 in sample sender applications.properties.

--- a/sample/sample_springboot_setup/sender/application.properties
+++ b/sample/sample_springboot_setup/sender/application.properties
@@ -1,5 +1,8 @@
 # Port number of the spring boot application (Only if 8080 is already taken)
-server.port=8081
+server.port=8085
+# This provides access to a web based management of H2 at http://localhost:8085/console/
+spring.h2.console.enabled=true
+spring.h2.console.path=/console/
 
 # ActiveMQ configuration
 # Url of the activemq broker ex:
