Added support for syncing deleted entities

--- a/app/src/it/resources/application.properties
+++ b/app/src/it/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=
 spring.datasource.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.ddlAuto=create
 spring.jpa.show-sql=true
+spring.liquibase.enabled=false
 
 camel.output.endpoint.file.location=/
 
