--- a/camel-openmrs/pom.xml
+++ b/camel-openmrs/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>bouncy-gpg</artifactId>
             <version>${bouncy-gpg.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
